CesiumGen/Headers/cesium/cesium_tileset.h

/* ============================================================================
 * Opaque handle types
 * ========================================================================= */

typedef struct CesiumAsyncSystem CesiumAsyncSystem;
typedef struct CesiumAssetAccessor CesiumAssetAccessor;
typedef struct CesiumCreditSystem CesiumCreditSystem;
/* ============================================================================
 * AsyncSystem
 * ========================================================================= */

/**
 * @brief Creates an async system with a built-in thread pool.
 */
CESIUM_API CesiumAsyncSystem* cesium_async_system_create(void);
/**
 * @brief Destroys the async system.
 */
CESIUM_API void cesium_async_system_destroy(CesiumAsyncSystem* asyncSystem);
/**
 * @brief Dispatches pending main-thread tasks. Must be called each frame from the main thread.
 *
 * On a platform with threads this runs continuations that were scheduled back to the main thread,
 * while the work itself happens on background workers. On a single-threaded build -- Emscripten
 * without -pthread, which is how .NET's browser-wasm links native code -- there are no workers, so
 * this call is what runs the background work as well. Skipping it there does not merely delay
 * callbacks: nothing loads at all.
 */
CESIUM_API void cesium_async_system_dispatch_main_thread_tasks(CesiumAsyncSystem* asyncSystem);
/* ============================================================================
 * AssetAccessor (HTTP client)
 * ========================================================================= */

/**
 * @brief Creates an asset accessor backed by libcurl.
 *
 * Available on every platform where CesiumCurl is, which upstream defines as everything
 * except wasm32. On Emscripten there is no libcurl, so this returns an accessor with no
 * transport attached: every request fails with status 0. A browser consumer wants
 * cesium_asset_accessor_create_from_callbacks instead.
 *
 * @param userAgent The User-Agent header string, or NULL for default. Ignored on Emscripten.
 */
CESIUM_API CesiumAssetAccessor* cesium_asset_accessor_create(const char* userAgent);
/**
 * @brief Destroys the asset accessor.
 *
 * Releases this handle's reference. The accessor itself lives while a CesiumTilesetExternals
 * still holds it, so cancelRequest and destroy fire when the last reference drops rather than
 * necessarily here.
 */
CESIUM_API void cesium_asset_accessor_destroy(CesiumAssetAccessor* accessor);
/* ============================================================================
 * CreditSystem
 * ========================================================================= */

/**
 * @brief Creates a new credit system.
 */
CESIUM_API CesiumCreditSystem* cesium_credit_system_create(void);
/**
 * @brief Destroys the credit system.
 */
CESIUM_API void cesium_credit_system_destroy(CesiumCreditSystem* creditSystem);