CesiumGen/Headers/cesium/cesium_gltf.h

typedef struct CesiumGltfModel CesiumGltfModel;
/**
 * @brief Gets the number of accessors in the model.
 */
CESIUM_API int cesium_gltf_model_get_accessor_count(const CesiumGltfModel* model);
/**
 * @brief Gets the number of buffers in the model.
 */
CESIUM_API int cesium_gltf_model_get_buffer_count(const CesiumGltfModel* model);
/**
 * @brief Gets the number of buffer views in the model.
 */
CESIUM_API int cesium_gltf_model_get_buffer_view_count(const CesiumGltfModel* model);
/**
 * @brief Gets the number of scenes in the model.
 */
CESIUM_API int cesium_gltf_model_get_scene_count(const CesiumGltfModel* model);
/**
 * @brief Gets the number of animations in the model.
 */
CESIUM_API int cesium_gltf_model_get_animation_count(const CesiumGltfModel* model);
/**
 * @brief Gets the number of skins in the model.
 */
CESIUM_API int cesium_gltf_model_get_skin_count(const CesiumGltfModel* model);