Evergine.Bindings.CesiumNative/Generated/Functions.cs


		/// <summary>
		/// @brief Gets the number of accessors in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_accessor_count(IntPtr model);

		/// <summary>
		/// @brief Gets the number of buffers in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_buffer_count(IntPtr model);

		/// <summary>
		/// @brief Gets the number of buffer views in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_buffer_view_count(IntPtr model);

		/// <summary>
		/// @brief Gets the number of scenes in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_scene_count(IntPtr model);

		/// <summary>
		/// @brief Gets the number of animations in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_animation_count(IntPtr model);

		/// <summary>
		/// @brief Gets the number of skins in the model.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_gltf_model_get_skin_count(IntPtr model);
	}
}

namespace Evergine.Bindings.CesiumNative.Ion
{
	public static unsafe partial class CesiumNativeAPI
	{
		/// <summary>
		/// @brief Creates an Ion connection from an existing access token.
		/// @param asyncSystem The async system.
		/// @param accessor The asset accessor for HTTP requests.
		/// @param accessToken The Cesium Ion access token.
		/// @param apiUrl The Ion API URL, or NULL for "https://api.cesium.com/".
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_ion_connection_create(IntPtr asyncSystem, IntPtr accessor, [MarshalAs(UnmanagedType.LPStr)] string accessToken, [MarshalAs(UnmanagedType.LPStr)] string apiUrl);

		/// <summary>
		/// @brief Destroys an Ion connection.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_ion_connection_destroy(IntPtr connection);

		/// <summary>
		/// @brief Starts the OAuth authorization flow.
		/// @param asyncSystem The async system.
		/// @param accessor The asset accessor.
		/// @param appID The application's OAuth client ID.
		/// @param redirectPath The redirect path (e.g., "/cesium-callback").
		/// @param scopes Space-separated OAuth scopes.
		/// @param urlCallback Called with the authorization URL to open in a browser.
		/// @param urlCallbackUserData User data for urlCallback.
		/// @param completeCallback Called when authorization completes.
		/// @param completeCallbackUserData User data for completeCallback.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_ion_connection_authorize(IntPtr asyncSystem, IntPtr accessor, [MarshalAs(UnmanagedType.LPStr)] string appID, [MarshalAs(UnmanagedType.LPStr)] string redirectPath, [MarshalAs(UnmanagedType.LPStr)] string scopes, CesiumIonAuthorizeUrlCallback urlCallback, void* urlCallbackUserData, CesiumIonAuthorizeCompleteCallback completeCallback, void* completeCallbackUserData);

		/// <summary>
		/// @brief Requests the list of assets from Cesium Ion (async).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_ion_connection_list_assets(IntPtr connection, CesiumIonAssetsCompleteCallback callback, void* userData);

		/// <summary>
		/// @brief Gets the number of assets in the list.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_ion_asset_list_get_count(IntPtr list);

		/// <summary>
		/// @brief Gets an asset's ID.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern long cesium_ion_asset_list_get_asset_id(IntPtr list, int index);

		/// <summary>
		/// @brief Gets an asset's name.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* cesium_ion_asset_list_get_asset_name(IntPtr list, int index);

		/// <summary>
		/// @brief Gets an asset's type (e.g., "3DTILES", "TERRAIN", "IMAGERY").
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* cesium_ion_asset_list_get_asset_type(IntPtr list, int index);

		/// <summary>
		/// @brief Destroys an asset list.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_ion_asset_list_destroy(IntPtr list);

		/// <summary>
		/// @brief Requests the list of tokens from Cesium Ion (async).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_ion_connection_list_tokens(IntPtr connection, CesiumIonTokensCompleteCallback callback, void* userData);

		/// <summary>
		/// @brief Gets the number of tokens in the list.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern int cesium_ion_token_list_get_count(IntPtr list);

		/// <summary>
		/// @brief Gets a token's name.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* cesium_ion_token_list_get_token_name(IntPtr list, int index);

		/// <summary>
		/// @brief Gets a token's value string.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern byte* cesium_ion_token_list_get_token_value(IntPtr list, int index);

		/// <summary>
		/// @brief Destroys a token list.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_ion_token_list_destroy(IntPtr list);
	}
}

namespace Evergine.Bindings.CesiumNative.RasterOverlays
{
	public static unsafe partial class CesiumNativeAPI
	{
		/// <summary>
		/// @brief Gets the raster overlay collection from a tileset.
		/// The returned pointer is owned by the tileset.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_tileset_get_overlays(IntPtr tileset);

		/// <summary>
		/// @brief Adds a raster overlay to the collection.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_raster_overlay_collection_add(IntPtr collection, IntPtr overlay);

		/// <summary>
		/// @brief Removes a raster overlay from the collection.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_raster_overlay_collection_remove(IntPtr collection, IntPtr overlay);

		/// <summary>
		/// @brief Creates a Cesium Ion raster overlay.
		/// @param assetID The Ion asset ID for the imagery.
		/// @param accessToken The Ion access token.
		/// @param ionAssetEndpointUrl The Ion API endpoint, or NULL for default.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_ion_raster_overlay_create(long assetID, [MarshalAs(UnmanagedType.LPStr)] string accessToken, [MarshalAs(UnmanagedType.LPStr)] string ionAssetEndpointUrl);

		/// <summary>
		/// @brief Creates a URL-template raster overlay (e.g., XYZ tiles).
		/// @param name Display name for the overlay.
		/// @param urlTemplate URL template with {x}, {y}, {z} placeholders.
		/// @param minimumLevel Minimum zoom level.
		/// @param maximumLevel Maximum zoom level.
		/// @param tileWidth Tile width in pixels (e.g., 256).
		/// @param tileHeight Tile height in pixels (e.g., 256).
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_url_template_raster_overlay_create([MarshalAs(UnmanagedType.LPStr)] string name, [MarshalAs(UnmanagedType.LPStr)] string urlTemplate, uint minimumLevel, uint maximumLevel, uint tileWidth, uint tileHeight);

		/// <summary>
		/// @brief Creates a TMS (Tile Map Service) raster overlay.
		/// @param name Display name for the overlay.
		/// @param url The TMS service URL.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_tile_map_service_raster_overlay_create([MarshalAs(UnmanagedType.LPStr)] string name, [MarshalAs(UnmanagedType.LPStr)] string url);

		/// <summary>
		/// @brief Creates a WMS (Web Map Service) raster overlay.
		/// @param name Display name for the overlay.
		/// @param url The WMS service URL.
		/// @param layers Comma-separated list of WMS layers.
		/// @param tileWidth Tile width in pixels.
		/// @param tileHeight Tile height in pixels.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_web_map_service_raster_overlay_create([MarshalAs(UnmanagedType.LPStr)] string name, [MarshalAs(UnmanagedType.LPStr)] string url, [MarshalAs(UnmanagedType.LPStr)] string layers, int tileWidth, int tileHeight);

		/// <summary>
		/// @brief Destroys a raster overlay.
		/// Remove it from any collections first.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_raster_overlay_destroy(IntPtr overlay);
	}
}

namespace Evergine.Bindings.CesiumNative.Tileset
{
	public static unsafe partial class CesiumNativeAPI
	{
		/// <summary>
		/// @brief Creates an async system with a built-in thread pool.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_async_system_create();

		/// <summary>
		/// @brief Destroys the async system.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_async_system_destroy(IntPtr asyncSystem);

		/// <summary>
		/// @brief Dispatches pending main-thread tasks. Must be called each frame
		/// from the main thread.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_async_system_dispatch_main_thread_tasks(IntPtr asyncSystem);

		/// <summary>
		/// @brief Creates an asset accessor using libcurl.
		/// @param userAgent The User-Agent header string, or NULL for default.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_asset_accessor_create([MarshalAs(UnmanagedType.LPStr)] string userAgent);

		/// <summary>
		/// @brief Destroys the asset accessor.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_asset_accessor_destroy(IntPtr accessor);

		/// <summary>
		/// @brief Creates a new credit system.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern IntPtr cesium_credit_system_create();

		/// <summary>
		/// @brief Destroys the credit system.
		/// </summary>
		[DllImport("CesiumNativeC", CallingConvention = CallingConvention.Cdecl)]
		public static extern void cesium_credit_system_destroy(IntPtr creditSystem);
